# ONVIFy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  NOTICE  QUICKSTART.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: enterprise-hardening.yml
.github/workflows/: ci.yml
docs/: PROJECT.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: generate-api-client.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/ui/: button.tsx
packaging/linux/: README.md  onvify.service
packaging/macos/: README.md  com.onvify.server.plist
packaging/windows/: README.md  build-exe.ps1  onvify.wxs
scripts/: generate_frontend_api.py
src/onvify/: __init__.py  cli.py  config.py
src/onvify/api/: app.py  dependencies.py  middleware.py  redaction.py  websocket.py
src/onvify/api/routes/: auth.py  cameras.py  detection.py  streams.py  system.py
src/onvify/inference/: __init__.py  factory.py  local_yolo.py  motion_gate.py  openai_compatible.py  pipeline.py  protocol.py
src/onvify/infrastructure/: __init__.py  database.py  logging.py  platform.py
src/onvify/models/: __init__.py  camera.py  detection.py  onvif.py
src/onvify/onvif_xml/: __init__.py  templates.py
src/onvify/services/: camera_manager.py  mediamtx_binary.py  mjpeg.py  onvif_device.py  onvif_discovery.py  onvif_events.py  onvif_server.py  stream_consumer.py  streaming.py
tests/: conftest.py
tests/fixtures/: README.md
tests/unit/: test_api.py  test_camera_manager.py  test_config.py  test_mediamtx_binary.py  test_middleware.py  test_models.py  test_onvif_discovery.py  test_onvif_events.py  test_onvif_server.py  test_onvif_xml.py  test_openai_backend.py  test_persistence.py  test_stream_consumer.py  test_windows_packaging.py
