[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onvify"
version = "0.1.0"
description = "Enterprise ONVIF/RTSP virtual camera server with pluggable AI detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Josiah Nelson" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.21",
    "structlog>=24.4",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
inference = [
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
]
coreml = ["coremltools>=8.0"]
packaging = ["pyinstaller>=6.0"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
]

[project.scripts]
onvify = "onvify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onvify"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["onvify"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["onvify"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "numpy.typing",
    "cv2",
    "torch.*",
    "ultralytics.*",
    "coremltools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external services (MediaMTX, ONVIF devices)",
]
